--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     <div class="container">
         <div class="one">
             <h1 class="one">
-                Hi
-                <span id="name">Irene</span>
+                <span data-node-name="greeting">Chao xìnnnnn"</span>
+                <br>
+                <span style="color: #e00d73;" data-node-name="name">Bé Lan Anh Xinh Đẹp</span>
             </h1>
             <p class="two" id="greetingText">I really like your name btw!</p>
         </div>
