--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <div class="container">
         <div class="one">
             <h1 class="one">
-                <span data-node-name="greeting">Chao xìnnnnn"</span>
+                <span data-node-name="greeting">Chao xìnn"</span>
                 <br>
-                <span style="color: #e00d73;" data-node-name="name">Bé Lan Anh Xinh Đẹp</span>
+                <span style="color: #e00d73;" data-node-name="name">Bé Lan Anh xinh đẹp ❤️</span>
             </h1>
-            <p class="two" id="greetingText">I really like your name btw!</p>
+            <p class="two" id="greetingText">- AKA Em bé của anh -</p>
         </div>
 
         <div class="three">
