--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container">
         <div class="one">
             <h1 class="one">
-                <span data-node-name="greeting">Chao xìnn"</span>
+                <span data-node-name="greeting">Chao xìnn</span>
                 <br>
                 <span style="color: #e00d73;" data-node-name="name">Bé Lan Anh xinh đẹp ❤️</span>
             </h1>
