--- a/index.html
+++ b/index.html
@@ -34,35 +34,35 @@
         </div>
 
         <div class="three">
-            <p>It's your birthday!! :D</p>
+            <p>Hôm nay là sinh nhật đầu tiên cùng nhau của 2 đứa mình 🥰 :D</p>
         </div>
 
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+                Happy Birthday Sweetie 🎂
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
         </div>
 
         <div class="five">
-            <p class="idea-1">That's what I was going to do.</p>
-            <p class="idea-2">But then I stopped.</p>
+            <p class="idea-1">Hmm, anh cảm thấy vui khi được lần đầu tiên tổ chức sinh nhật cho bé</p>
+            <p class="idea-2">Và không chỉ dừng ở đó</p>
             <p class="idea-3">
-                I realised, I wanted to do something<br>
-                <strong>special</strong>
+                Anh có 1 lời chúc dành cho em cực kì <br>
+                <strong>ĐẶC BIỆT...</strong>
                 .
             </p>
-            <p class="idea-4">Because,</p>
+            <p class="idea-4">Bởi vì,</p>
             <p class="idea-5">
-                You are Special
-                <span>:)</span>
+                Em là người cực kỳ đặc biệt trong lòng anh
+                <span>:3</span>
             </p>
             <p class="idea-6">
                 <span>S</span>
                 <span>O</span>
-            </p>
+            </p>f
         </div>
 
         <div class="six">
