--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <p class="idea-6">
                 <span>S</span>
                 <span>O</span>
-            </p>f
+            </p>
         </div>
 
         <div class="six">
@@ -70,7 +70,7 @@
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h5 id="wishText">Chúc em bé sinh nhật thiệt là vui vẻ, hạnh phúc, hạnh phúc bên gia đình người thân và đặc biệt là bên anh, mong em lúc nào cũng xinh đẹp, lúc nào cũng tươi tắn khỏe khoắn. Chúc em trong tương lai sẽ đạt được những thứ em mong muốn, hơn nữa chúc em sẽ cùng anh làm được nhiều thứ hơn trong tương lai và cuối cùng tuổi mới thì anh mong em bé sẽ nghe lời anh hơn, cố gắng chăm sóc bản thân tốt hơn nè và cười nhiều hơn nheee <3</h5>
             </div>
         </div>
 
