--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </p>
             <p class="idea-4">Bởi vì,</p>
             <p class="idea-5">
-                Em là người cực kỳ quan trọng trong lòng anh
+                Em là người cực kỳ quan trọng <br> trong lòng anh🥰
                 <span>:3</span>
             </p>
             <p class="idea-6">
