--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-  <title>HappyBirthday em bé ❤️❤️❤️ :)</title>
+  <title>HappyBirthday bé xinh đẹp ❤️❤️❤️ :)</title>
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,7 +28,7 @@
             <h1 class="one">
                 <span data-node-name="greeting">Chao xìnn</span>
                 <br>
-                <span style="color: #e00d73;" data-node-name="name">Bé Lan Anh xinh đẹp ❤️</span>
+                <span style="color: #e00d73;" data-node-name="name">Bé Minh Lương xinh đẹp ❤️</span>
             </h1>
             <p class="two" id="greetingText">- AKA Em bé của anh -</p>
         </div>
@@ -66,7 +66,7 @@
         </div>
 
         <div class="six">
-            <img src="437933165_1124431602004608_829009149723765192_n.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="avatar.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
