--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@
                 <circle cx="20" cy="20" r="20" />
             </svg>
         </div>
+        <video width="640" height="360" controls>
+          <source src="video1.mp4" type="video/mp4">
+          Trình duyệt không hỗ trợ thẻ video.
+        </video>
 
         <div class="nine">
             <p>Okay, now come back and tell me if you liked it.</p>
