--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
             </svg>
         </div>
         
-        <div class="nine">
-           <video width="640" height="360" controls>
-            <source src="video1.mp4" type="video/mp4">
+        <!div class="nine">
+           <!video width="640" height="360" controls>
+            <!source src="video1.mp4" type="video/mp4">
             Trình duyệt không hỗ trợ thẻ video.
-          </video>
-        </div>
+          <!/video>
+        <!/div>
         <div class="ten">
             <p>Okay, now come back and tell me if you liked it.</p>
             <p id="replay">Or click, if you want to watch it again.</p>
